# BotopsClient

./: README.md  pyproject.toml  setup.py
botops/: __init__.py  botops.py
